--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "com.sz.ucar:bwued:0.0.28-SNAPSHOT"
     implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.github.17859762411:Implementation:1.0.0'
 }
